Implemented startup with swagger ui, appSettings.json, launchSettings.json, and a generic controller and some generic models.

--- a/Swagger_Example_Api/appsettings.json
+++ b/Swagger_Example_Api/appsettings.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	},
+	"AppSettings": {
+		"ApplicationName": "Swagger_Example",
+		"Environment": "development",
+		"SwaggerJsonUrl": "/swagger/v1/swagger.json"
+	}
 }
